Added GlobalReport Swagger
Added swagger definitions for the GlobalReportController API and schema objects
Added paging and count params to api/report get endpoint
